[project]
name = "remodelun"
version = "0.1.0"
description = "RemodelUN using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
remodelun = "remodelun.main:run"
run_crew = "remodelun.main:run"
train = "remodelun.main:train"
replay = "remodelun.main:replay"
test = "remodelun.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
